Bug 75118 - with "Table Boundaries" disabled, border-less table is painted with thin black borders
Summary: with "Table Boundaries" disabled, border-less table is painted with thin blac...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.1.1 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:4.3.0 target:4.2.2
Keywords: regression
: 75153 75698 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-17 20:54 UTC by dany franck
Modified: 2014-03-15 09:48 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dany franck 2014-02-17 20:54:29 UTC
Open Writer
Create a table
Select the table
Clear all borders
Go to menu Tables and deselect boundaries

What should happen: boundaries desappear
What happens: boundaries are shown in black

W8.1 and Ubuntu 12.04.4
Comment 1 vulcain 2014-02-17 21:22:12 UTC
I confirmed on Ubuntu 12.04.4 x86_64 
LibreOffice 4.2.1.1 Build ID: d7dbbd7842e6a58b0f521599204e827654e1fb8b
Comment 2 Laurent Balland 2014-02-18 21:20:50 UTC
On Win7 32bit,
Confirmed with LibO 4.2.1.1
NOT confirmed with LibO 4.2.0.4

set regression as keyword
set Platform to All
Comment 3 Laurent Balland 2014-02-18 21:32:08 UTC
Confirmed with Version: 4.2.1.0.0+
Build ID: a054c52a6fc556ddf1383b676e7be533aed69420
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-02-04_11:26:19

Confirmed with Version: 4.3.0.0.alpha0+
Build ID: bcfa89158e1ce8cecf9c078ef852225180472a55
TinderBox: Win-x86@47-TDF, Branch:MASTER, Time: 2014-01-30_14:53:08

NOT confirmed with Version: 4.3.0.0.alpha0+
Build ID: 99159a618fd1ea90a2bc8a72621c88a4cf26e6f5
TinderBox: Win-x86@47-TDF, Branch:MASTER, Time: 2014-01-17_06:46:31
Comment 4 Laurent Balland 2014-02-18 22:03:46 UTC
Still present with Version: 4.2.2.0.0+
Build ID: 50a2ddc88f7b9f48fecd562ca0f4bd76c79f0cc3
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-02-15_00:22:48
Comment 5 Michael Stahl 2014-02-19 20:00:13 UTC
regression from these 2 commits:

commit 6a3fb868b2b8af21f7b6140424b6f8377599a786
Author:     Kohei Yoshida <kohei.yoshida@collabora.com>
AuthorDate: Sat Jan 18 18:17:52 2014 -0500

    Draw horizontal solid border lines directly in the pixel processor.
    
    This makes slightly skinnier solid lines which look better on screen.

commit b3b57c7a3a43a056217c72716d18bdeced029b66
Author:     Kohei Yoshida <kohei.yoshida@collabora.com>
AuthorDate: Mon Jan 20 10:12:53 2014 -0500

    Same solid line treatment for vertical lines during on-screen drawing.


... which probably indicates that this has only worked by accident before,
e.g. Writer sending some 0-width border to drawinglayer or some such nonsense.
Comment 6 Michael Stahl 2014-02-20 00:01:18 UTC
fixed on master
Comment 7 Commit Notification 2014-02-20 00:01:56 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=128d3d51c208ec5c37a105ea5c751530bd017d4b

fdo#75118: sw: do not paint zero-width lines



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-02-20 12:40:34 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9fb9fc301502c2762ad4a8059d8d1c818d2843db

fdo#75118: actually these are floats, compare with approxEqual



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Michael Stahl 2014-02-20 13:19:09 UTC
*** Bug 75153 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2014-02-20 14:02:14 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1639e174ebb3945f4fda08c30f535f98d3e54d7e&h=libreoffice-4-2

fdo#75118: sw: do not paint zero-width lines


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-02-21 15:38:05 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7d8e24dc4c3dd63977970fd0b4856ab81aee6305&h=libreoffice-4-2-2

fdo#75118: sw: do not paint zero-width lines


It will be available already in LibreOffice 4.2.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 dany franck 2014-03-15 09:48:53 UTC
*** Bug 75698 has been marked as a duplicate of this bug. ***