fdo#75118: sw: do not paint zero-width lines

Since commit 6a3fb868b2b8af21f7b6140424b6f8377599a786 zero-width
BorderLinePrimitive2D will actually be painted as hairlines by
VclPixelProcessor2D::tryDrawBorderLinePrimitive2DDirect(), so don't
create such pointless primitives.

Change-Id: I4c2404b73f106156b83a6d72efa3c8991e5d659e