sw/source/core/layout/paintfrm.cxx
@@ -2459,8 +2459,8 @@ void SwTabFrmPainter::PaintLines( OutputDevice& rDev, const SwRect& rRect ) cons
             break;
 
         const SwLineEntrySet& rEntrySet = (*aIter).second;
-        SwLineEntrySetConstIter aSetIter = rEntrySet.begin();
-        while ( aSetIter != rEntrySet.end() )
+        for (SwLineEntrySetConstIter aSetIter = rEntrySet.begin();
+                 aSetIter != rEntrySet.end(); ++aSetIter)
         {
             const SwLineEntry& rEntry = *aSetIter;
             const svx::frame::Style& rEntryStyle( (*aSetIter).maAttribute );
@@ -2593,6 +2593,11 @@ void SwTabFrmPainter::PaintLines( OutputDevice& rDev, const SwRect& rRect ) cons
                 aPaintStart.Y() -= nTwipYCorr;
                 aPaintEnd.Y()   -= nTwipYCorr;
 
+                if (aStyles[0].Prim() <= 0 && aStyles[0].Secn() <= 0)
+                {
+                    continue; // fdo#75118 do not paint zero-width lines
+                }
+
                 // Here comes the painting stuff: Thank you, DR, great job!!!
                 if ( bHori )
                 {
@@ -2627,8 +2632,6 @@ void SwTabFrmPainter::PaintLines( OutputDevice& rDev, const SwRect& rRect ) cons
                     );
                 }
             }
-
-            ++aSetIter;
         }
 
         ++aIter;
